# versify

./: .env.example  .gitignore  Cargo.toml  README.md  response.json
.github/workflows/: rust.yml
src/: args.rs  get_packages_from_github.rs  main.rs  mappings.rs  replace_version.rs
src/github/: api.rs  create_branch.rs  get_packages_from_github.rs  init_headers.rs  mod.rs  response.rs  test.rs
src/reader/: read_file.rs
src/version_manager/: mappings.rs  mod.rs  replace_version.rs
