[package]
name = "versify"
version = "0.3.0"
edition = "2021"
authors = ["Wagner de Oliveira da Rosa"]
description = "A simple CLI tool for managing the versions in packages.txt"
repository = "https://github.com/wagner-deoliveira/versify"
keywords = ["cli", "versify"]
license = "MIT OR Apache-2.0"
categories = ["command-line-utilities"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.4" , features = ["derive"]}
regex = "1.9.5"
log = "0.4.20"
lazy_static = "1.4.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
dotenv = "0.15.0"
serde_json = "1.0"
serde = { version = "1.0.189", features = ["derive"] }
