[package]
name = "versify"
version = "1.0.2"
edition = "2021"
authors = ["Wagner de Oliveira da Rosa"]
description = "A simple CLI tool for managing the versions in packages.txt"
repository = "https://github.com/wagner-deoliveira/versify"
keywords = ["cli", "versify"]
license = "MIT OR Apache-2.0"
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.4.6" , features = ["derive"]}
regex = "1.10.2"
log = "0.4.20"
lazy_static = "1.4.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1.33.0", features = ["rt", "rt-multi-thread", "macros"] }
dotenv = "0.15.0"
serde_json = "1.0"
serde = { version = "1.0.189", features = ["derive"] }
base64 = "0.21.5"


[profile.release]
codegen-units = 1
lto = false

